--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         //userAgent (모든정보)
         let info = navigator.userAgent.toLocaleLowerCase();
         let osTxt = '';
-        console.log(userAgent);
+        console.log(info);
         
         //운영체제 판단(디바이스 확인)
         if(info.indexOf('windows') >= 0) {
