--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         } else if(info.indexOf('android') >= 0){
             osTxt = '안드로이드';
         }
-        document.write(`${osTxt}입니다`);
+        document.write(`${osTxt}운영체제입니다`);
     </script>
 </body>
 </html>
